--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "process": "^0.11.10"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.2"
   },
-  "browserlist":[
+  "browserlist": [
     "last 2 chrome version",
     "last 10 firefox version"
   ]
