--- a/package.json
+++ b/package.json
@@ -1,35 +1,120 @@
 {
-  "name": "react",
-  "version": "1.0.0",
-  "description": "This is namaste react by saaransh bhoj",
-  "scripts": {
-    "dev": "parcel index.html",
+   
+
+    "scripts": {
+   
+
+       
+
+    "start": "parcel index.html",
+   
+
+       
+
+    "build": "parcel build index.html",
+   
+
+       
+
     "test": "jest"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/saaranshbhoj/react1"
-  },
-  "keywords": [
-    "namaste",
-    "react"
-  ],
-  "author": "Saaransh bhoj",
-  "license": "ISC",
-  "devDependencies": {
-    "autoprefixer": "^10.4.20",
+   
+
+    },
+   
+
+    "dependencies": {
+   
+
+       
+
+    "@reduxjs/toolkit": "^2.5.1",
+   
+
+       
+
+    "@tailwindcss/postcss": "^4.0.4",
+   
+
+       
+
+    "react": "^18.3.1",
+   
+
+       
+
+    "react-dom": "^18.3.1",
+   
+
+       
+
+    "react-redux": "^9.2.0",
+   
+
+       
+
+    "react-router-dom": "^6.29.0",
+   
+
+       
+
+    "tailwindcss": "^4.0.4"
+   
+
+    },
+   
+
+    "devDependencies": {
+   
+
+       
+
+    "@babel/core": "^7.26.9",
+   
+
+       
+
+    "@babel/preset-env": "^7.26.9",
+   
+
+       
+
+    "@babel/preset-react": "^7.26.3",
+   
+
+       
+
+    "@testing-library/jest-dom": "^6.6.3",
+   
+
+       
+
+    "@testing-library/react": "^16.2.0",
+   
+
+       
+
+    "babel-jest": "^29.7.0",
+   
+
+       
+
+    "jest": "^29.7.0",
+   
+
+       
+
+    "jest-environment-jsdom": "^29.7.0",
+   
+
+       
+
     "parcel": "^2.13.3",
-    "postcss": "^8.5.1",
+   
+
+       
+
     "process": "^0.11.10"
-  },
-  "dependencies": {
-    "@tailwindcss/postcss": "^4.0.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.2"
-  },
-  "browserslist": [
-    "last 2 chrome version",
-    "last 10 firefox version"
-  ]
+   
+
+    }
 }
